--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
-    "lib": ["es2017", "esnext.asynciterable", "dom"],
+    "lib": ["es2017", "esnext.asynciterable", "dom", "ES2018.Promise"],
+    "types": ["node"],
     "skipLibCheck": true,
     "sourceMap": true,
     "outDir": "./dist",
