--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "prisma": "^6.5.0"
-  },
-  "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.10",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "prisma": "^6.5.0",
     "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
