--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.10",
+    "acrcloud": "^1.4.0",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
