--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "acrcloud": "^1.4.0",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
+    "expo-server-sdk": "^3.15.0",
     "express": "^4.18.2",
     "prisma": "^6.5.0",
     "typescript": "^5.3.3"
